--- a/modules/caps-queue/package.json
+++ b/modules/caps-queue/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "caps-hub",
+  "name": "caps-queue",
   "version": "1.0.0",
   "description": "",
-  "main": "caps.js",
+  "main": "queue.js",
   "scripts": {
-    "start": "nodemon caps.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "faker": "^5.5.3",
-    "nodemon": "^2.0.14",
-    "socket.io": "^4.3.1",
     "uuid": "^8.3.2"
   }
 }
